src/test/ui/span/E0536.stderr
error[E0536]: expected 1 cfg-pattern
  --> $DIR/E0536.rs:1:7
   |
LL | #[cfg(not())] //~ ERROR E0536
   |       ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0536`.
